<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_cake"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/cake" />
        <item
            android:id="@+id/nav_cup_cake"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/cup_cake" />
        <item
            android:id="@+id/nav_cookies"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/cookies" />
        <item
            android:id="@+id/nav_ice_cream"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/ice_cream" />
        <item
            android:id="@+id/nav_indian_dessert"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/indian_dessert" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
